--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.2.2",
+    "bootstrap": "^5.2.3",
     "g-sheets-api": "^1.4.0",
     "googleapis": "^66.0.0",
     "react": "^17.0.1",
+    "react-bootstrap": "^2.7.2",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.2",
     "react-scripts": "4.0.1",
